modify build script

--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,6 @@ lang.each {ln ->
     apply plugin: ln
 }
 apply plugin: 'idea'
-apply plugin: 'gae'
 
 sourceCompatibility = 1.6
 targetCompatibility = 1.6
@@ -15,13 +14,15 @@ repositories {
     mavenCentral()
 }
 
-dependencies {
-    compile 'javax.servlet:servlet-api:2.5'
-    compile 'javax.servlet:jsp-api:2.0'
-    compile "com.google.appengine:appengine-api-1.0-sdk:$gaeVersion"
-    compile "com.google.appengine:appengine-api-labs:$gaeVersion"
+apply plugin: 'gae'
+gae {
+    downloadSdk = true
+    System.properties['appengine.sdk.root'] = gaeDownloadSdk.explodedSdkDirectory.getPath() + File.separator + "appengine-java-sdk-$gaeVersion"
+}
 
+dependencies {
     groovy 'org.codehaus.groovy:groovy:2.1.1'
+    gaeSdk "com.google.appengine:appengine-java-sdk:$gaeVersion"
 
     testCompile 'junit:junit:4.11'
 }
