--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -5,4 +5,13 @@
 		  http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
            version="2.5">
 
+    <servlet>
+        <servlet-name>HelloWorldServlet</servlet-name>
+        <servlet-class>net.sue445.gaerminal.HelloWorldServlet</servlet-class>
+    </servlet>
+    
+    <servlet-mapping>
+        <servlet-name>HelloWorldServlet</servlet-name>
+        <url-pattern>/helloworld</url-pattern>
+    </servlet-mapping>
 </web-app>
