--- a/build.gradle
+++ b/build.gradle
@@ -1,26 +1,64 @@
 def gaeVersion = '1.7.6'
+def slim3Version = '1.0.16'
 def lang = ['java', 'groovy']
 
 lang.each {ln ->
     apply plugin: ln
 }
 apply plugin: 'idea'
+apply plugin: 'gae'
 
 sourceCompatibility = 1.6
 targetCompatibility = 1.6
 
 
-repositories {
-    mavenCentral()
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'org.gradle.api.plugins:gradle-gae-plugin:0.8'
+        classpath "com.google.appengine:appengine-maven-plugin:1.7.6"
+    }
 }
 
-apply plugin: 'gae'
+repositories {
+    mavenCentral()
+    maven {
+        url "https://www.seasar.org/maven/maven2"
+    }
+}
+
+dependencies {
+    groovy 'org.codehaus.groovy:groovy:2.1.1'
+    gaeSdk "com.google.appengine:appengine-java-sdk:$gaeVersion"
+
+    compile 'javax.servlet:servlet-api:2.5'
+    compile 'javax.servlet:jsp-api:2.0'
+
+    testCompile 'junit:junit:4.11'
+    testCompile 'org.hamcrest:hamcrest-all:1.3'
+    testCompile "com.google.appengine:appengine-api-1.0-sdk:$gaeVersion"
+    testCompile "com.google.appengine:appengine-testing:$gaeVersion"
+    testCompile "com.google.appengine:appengine-api-stubs:$gaeVersion"
+
+//    testCompile "com.google.appengine:appengine:$gaeVersion"
+//    testCompile "com.google.appengine:appengine-api-1.0-sdk:$gaeVersion"
+//    testCompile "com.google.appengine:appengine-api-labs:$gaeVersion"
+//    testCompile "com.google.appengine:appengine-api-stubs:$gaeVersion"
+//    testCompile "com.google.appengine:appengine-local-endpoints:$gaeVersion"
+    testCompile ("org.slim3:slim3:$slim3Version") {
+        //exclude group: 'com.google.appengine', module: 'appengine-api-1.0-sdk'
+    }
+}
+
 gae {
     httpPort = 8888
     optimizeWar = true
 
     appcfg {
-        email = 'sue445fukuoka@gmail.com'
+        email = googleAccount
         passIn = true
 
         logs {
@@ -47,16 +85,6 @@ gae {
     }
 }
 
-dependencies {
-    compile 'javax.servlet:servlet-api:2.5'
-    compile 'javax.servlet:jsp-api:2.0'
-    groovy 'org.codehaus.groovy:groovy:2.1.1'
-    gaeSdk "com.google.appengine:appengine-java-sdk:$gaeVersion"
-
-    testCompile 'junit:junit:4.11'
-    testCompile 'org.hamcrest:hamcrest-all:1.3'
-}
-
 task structure(depends : idea) << {
     def dirs = []
     dirs << 'src'
@@ -69,16 +97,6 @@ task structure(depends : idea) << {
     dirs.each {
         def dir = new File(it)
         if(dir.exists() == false) dir.mkdir()
-    }
-}
-
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-
-    dependencies {
-        classpath 'org.gradle.api.plugins:gradle-gae-plugin:0.8'
     }
 }
 
