--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,6 @@ language: groovy
 jdk:
   - oraclejdk7
   - openjdk6
+  - openjdk7
 before_install:
   - cp gradle.properties.sample gradle.properties
