--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -19,4 +19,13 @@
         <url-pattern>/gaerminal/*</url-pattern>
         <dispatcher>REQUEST</dispatcher>
     </filter-mapping>
+
+    <security-constraint>
+        <web-resource-collection>
+            <url-pattern>/gaerminal/*</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <role-name>admin</role-name>
+        </auth-constraint>
+    </security-constraint>
 </web-app>
