refactor: skip password when local deploy

--- a/build.publish.gradle
+++ b/build.publish.gradle
@@ -7,6 +7,8 @@ boolean validProperty(propertyName) {
     catch (MissingPropertyException) { false }
 }
 
+def isRemoteDeploy = (deploy == "central")
+
 assert validProperty('signing.keyId'),             'properties for signing must be provided'
 assert validProperty('signing.secretKeyRingFile'), 'properties for signing must be provided'
 assert validProperty('sonatypeUsername'),          'properties for publish must be provided'
@@ -15,29 +17,33 @@ assert validProperty('sonatypeFullname'),          'properties for publish must 
 String askPassword(prompt) {
     "${System.console().readPassword(prompt)}"
 }
-ext.'signing.password' = askPassword("Enter password for PGP key ${property('signing.keyId')}: ")
-ext.'sonatypePassword' = askPassword("Enter password for ${sonatypeUsername}@oss.sonatype.org: ")
 
-signing {
-    sign configurations.archives
+if(isRemoteDeploy){
+    ext.'signing.password' = askPassword("Enter password for PGP key ${property('signing.keyId')}: ")
+    ext.'sonatypePassword' = askPassword("Enter password for ${sonatypeUsername}@oss.sonatype.org: ")
+
+    signing {
+        sign configurations.archives
+    }
 }
 
 uploadArchives {
     repositories.mavenDeployer {
         // -Pdeploy=central
-        if(deploy == "central"){
+        if(isRemoteDeploy){
             println "deploy to sonatype"
 
             repository(url: 'https://oss.sonatype.org/service/local/staging/deploy/maven2/') {
                 authentication(userName: sonatypeUsername, password: sonatypePassword)
             }
+            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+
         } else {
             println "deploy to local repo: ${localRepoPath}"
 
             // define at gradle.properties
             repository(url: localRepoPath)
         }
-        beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
 
         pom.groupId    = project.group
         pom.artifactId = project.name
