--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 project.description = 'run groovy script on your Google App Engine app'
 project.group       = 'net.sue445'
-project.version     = '0.0.1-SNAPSHOT'
+project.version     = '0.0.0'
 
 def gaeVersion    = '1.7.7'
 def slim3Version  = '1.0.16'
