--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,7 @@ jdk:
   - openjdk7
 before_install:
   - cp gradle.properties.sample gradle.properties
+branches:
+  only:
+    - master
+    - develop
