--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 project.description = 'run groovy script on your Google App Engine app'
 project.group       = 'net.sue445'
-project.version     = '0.0.3'
+project.version     = '0.0.4-SNAPSHOT'
 
 def gaeVersion    = '1.8.0'
 def groovyVersion = '2.1.3'
